--- a/templates/index.html
+++ b/templates/index.html
@@ -1,68 +1,130 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
+  <head lang="en">
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.6/socket.io.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(){
-            var socket = io.connect("http://" + document.domain + ":" + location.port + "/mynamespace");
-            socket.on('response', function(msg){
-                if (msg.data.letter == undefined) {
-		  return false;
-		}
-                $("#letter").text('letter suggested : ' + msg.data.letter);
-	        $("#word").text('word suggested : ' + msg.data.word);
-            });
-            
-	    $(".key").click(function(event){
-	      $("#input").append(' ' + $.trim($(this).text()));
-	      socket.emit("request", {data: $.trim($("#input").text())});
-	      return false;
+      var socket;
+      var keyboard = ['qwe', 'rtyu', 'iop', 'asd', 'fgh', 'jkl', 'zxc', 'vbnm'];
+      var cursor = 0;
+      var windowIndex = [0,2];
+
+      function setKeyboard() {
+        $(".keycontainer").empty();
+	cursor = 0;
+	windowIndex = [0,2];
+	keyboard.forEach(function(key, index){
+          var keyDiv = $('<div>').append(key);
+	  keyDiv.css({
+	    "height": "100%",
+	    "width": "5%",
+	    "float": "left",
+	    "border-style": "solid"
+	  });
+	  if (index == 0) {
+	    keyDiv.css({
+	      "background-color": "red"
 	    });
+	  } 
+	  keyDiv.click(function(event){
+	    $("#input").append(' ' + $.trim($(this).text()));
+	    socket.emit("request", {data: $.trim($("#input").text())});
+	    return false;
+	  });
+	  $('.keycontainer').append(keyDiv);
+	});
+        $('.keycontainer').children().each(function(index) {
+	  if (windowIndex[0] <= index && index <= windowIndex[1]) {
+	    $('.keycontainer').children().eq(index).show();
+	  } else {
+	    $('.keycontainer').children().eq(index).hide();
+	  }
+        });   
+      }
+
+      function setKeyFocus() {
+        keyboard.forEach(function(key, index) {
+          if (index == cursor) {
+	    $(".keycontainer").children().eq(index).css({
+	      "background-color": "red"
+	    })
+          } else {
+	    $(".keycontainer").children().eq(index).css({
+	      "background-color": "white"
+	    })
+          }
         });
+      }
+
+      $(document).ready(function(){
+        socket = io.connect("http://" + document.domain + ":" + location.port + "/mynamespace");
+        socket.on('response', function(msg){
+          if (msg.data.letter == undefined) {
+            return false;
+          }
+	  keyboard = msg.data.letter.split(",");
+	  setKeyboard(socket, keyboard);
+	  $("#word").text('word suggested : ' + msg.data.word);
+        });
+            
+	setKeyboard();
+      });
+      
+      $(document).keydown(function(event) {
+        switch(event.keyCode) {
+	  case 37:
+            if (cursor == 0) {
+	      break;
+	    }
+            cursor--;
+	    if (cursor == windowIndex[0] && windowIndex[0] != 0) {
+	      windowIndex = [windowIndex[0] - 1, windowIndex[1] - 1];
+	      $('.keycontainer').children().each(function(index) {
+	        if (windowIndex[0] <= index && index <= windowIndex[1]) {
+		  $('.keycontainer').children().eq(index).show();
+		} else {
+		  $('.keycontainer').children().eq(index).hide();
+		}
+	      });
+	    }
+	    setKeyFocus();
+            break;
+	  case 39:
+	    if (cursor == 7) {
+	      break;
+	    }
+	    cursor++;
+	    if (cursor == windowIndex[1] && windowIndex[1] != keyboard.length - 1) {
+	      windowIndex = [windowIndex[0] + 1, windowIndex[1] + 1];
+	      $('.keycontainer').children().each(function(index) {
+	        if (windowIndex[0] <= index && index <= windowIndex[1]) {
+		  $('.keycontainer').children().eq(index).show();
+		} else {
+		  $('.keycontainer').children().eq(index).hide();
+		}
+	      });
+	    }
+	    setKeyFocus();
+	    break;
+	  case 13:
+	    $("#input").append(' ' + $.trim($(".keycontainer").children().eq(cursor).text()));
+	    socket.emit("request", {data: $.trim($("#input").text())});
+	    break;
+	}
+      });
     </script>
     <meta charset="UTF-8">
     <title>multi cursor test</title>
-</head>
-<body>
+  </head>
+  <body>
 
-<h3>input</h3>
-<div id="input" style="height: 50px;" >
-</div>
+    <div id="input" style="height: 50px;" >
+    </div>
+    <div id="word" style="height: 25px;"> 
+      word suggestd : 
+    </div>
 
-<div id="letter" style="height: 25px;"> 
-letter suggested : 
-</div>
-<div id="word" style="height: 25px;"> 
-word suggestd : 
-</div>
-
-<div class="keycontainer" style="height: 50px; width: 100%;">
-  <div class="key" id="1" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    qwe
-  </div>
-  <div class="key" id="2" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    rtyu
-  </div>
-  <div class="key" id="3" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    iop
-  </div>
-  <div class="key" id="4" style="height: 100%; width: 5%; float: left;border-style: solid;">
-    asd
-  </div>
-  <div class="key" id="5" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    fgh
-  </div>
-  <div class="key" id="6" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    jkl
-  </div>
-  <div class="key" id="7" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    zxc
-  </div>
-  <div class="key" id="8" style="height: 100%; width: 5%; float: left; border-style: solid;">
-    vbnm
-  </div>
-</div>
-
-</body>
+    <div class="keycontainer" style="height: 50px; width: 100%;">
+    </div>
+  </body>
 </html>
