Update key text align

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,8 @@
 	    "height": "100%",
 	    "width": "30%",
 	    "float": "left",
-	    "border-style": "solid"
+	    "border-style": "solid",
+	    "text-align": "center"
 	  });
 	  keyDiv.click(function(event){
 	    $("#input").append(' ' + $.trim($(this).text()));
