--- a/templates/index.html
+++ b/templates/index.html
@@ -91,8 +91,8 @@
     <title>multi cursor test</title>
   </head>
   <body>
-    <div id="word" style="height: 30px; margin: auto;"></div>
-    <div class="keycontainer" style="height: 50px; margin:auto; width: 100%; user-select: none;"></div>
+    <div id="word" style="height: 60px; width: 100%; font-size: 1.5em;"></div>
+    <div class="keycontainer" style="height: 50px; margin:auto; width: 100%; user-select: none; font-size: 1.5em;"></div>
     <div id="input" style="height: 50px;" ></div>
   </body>
 </html>
