--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <script src="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
     <script type="text/javascript">
       var socket;
-      var keyboard = ['qwe', 'rtyu', 'iop', 'asd', 'fgh', 'jkl', 'zxc', 'vbnm'];
+      var keyboard;
       var cursor = 1;
       var windowIndex = [0,2];
 
@@ -43,15 +43,11 @@
       $(document).ready(function(){
         socket = io.connect("http://" + document.domain + ":" + location.port + "/mynamespace");
         socket.on('response', function(msg){
-          if (msg.data.letter == undefined) {
-            return false;
-          }
 	  keyboard = msg.data.letter.split(",");
-	  setKeyboard(socket, keyboard);
+	  setKeyboard();
 	  $("#word").text(msg.data.word);
         });
             
-	setKeyboard();
 	$('.keycontainer').on('swiperight', function(event){
             if (cursor == 1) {
 	      return;
