--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 	wordList.forEach(function(key, index){
 	  var wordDiv = $('<div>').append(key);
 	  wordDiv.css({
-	    "height": "30px",
+	    "height": "40px",
 	    "width": "17%",
 	    "float": "left",
 	    "border-style": "solid",
@@ -58,8 +58,9 @@
 	  });
 	  if (key != '') {
 	    wordDiv.click(function(event){
+	      $("#selected").find('span').remove();
 	      $("#selected").append(' '+$.trim($(this).text()));
-              if ($.trim($("#selected").text()) == $.trim($("#target").text())) {
+              if ($.trim($("#selected").text()) == $.trim($("#target").text().toLowerCase())) {
                 setTarget();
               }
 	      $("#input").empty();
@@ -95,6 +96,17 @@
 	  setKeyboard();
 	  var wordList = msg.data.word.split(",");
 	  setSuggest(wordList);
+	  var nowInput = $.trim($("#input").text());
+	  if (nowInput != '') {
+	    var nowInputList = nowInput.split(' ');
+	    var newNowInput = $.trim(wordList[0].slice(0, nowInputList.length));
+	    var preDiv = $('<span>').append(' ' + newNowInput);
+	    preDiv.css({
+	      "color": "gray"
+	    });
+	    $("#selected").find('span').remove();
+	    $("#selected").append(preDiv);
+	  }
         });
 
         setTarget();
@@ -150,9 +162,10 @@
   <body scroll="no" style="margin: 0; height: 100%; width:100%; overflow: hidden; position: fixed;">
     <div id="target" style="height: 60px; padding-left: 1px; width:100%; font-size:1.5em"></div>
     <hr/>
-    <div id="selected" style="height: 60px; padding-left: 1px; width:100%; font-size:1em"></div>
+    <div id="selected" style="height: 60px; padding-left: 1px; width:100%; font-size:1em">
+    </div>
     <div id="inputspace">
-      <div id="word" style="height: 36px; padding-left: 2.5%; width: 100%; font-size: 1em;"></div>
+      <div id="word" style="height: 46px; padding-left: 2.5%; width: 100%; font-size: 1em;"></div>
       <div class="keycontainer" style="height: 36px; padding-left: 2%; margin-top: 10px; width: 100%; user-select: none; font-size: 1.5em;"></div>
     </div>
     <div id="input" style="margin-top: 20px; height: 30px; width: 100%;" ></div>
