Change set to filtered set

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>
     <script src="{{ url_for('static', filename='jquerymobile-swipeupdown.js')}}"></script>
-    <script src="{{ url_for('static', filename='mackenzie.js')}}"></script>
+    <script src="{{ url_for('static', filename='mackenzie_filtered.js')}}"></script>
     <script type="text/javascript">
       $.mobile.autoInitializePage = false;
       var socket;
