Update keyboard & word boxing style

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
 	    "width": "30%",
 	    "float": "left",
 	    "border-style": "solid",
+	    "border-width": "1px",
 	    "text-align": "center"
 	  });
 	  keyDiv.click(function(event){
@@ -50,9 +51,10 @@
 	  var wordDiv = $('<div>').append(key);
 	  wordDiv.css({
 	    "height": "40px",
-	    "width": "17%",
+	    "width": "19%",
 	    "float": "left",
 	    "border-style": "solid",
+	    "border-width": "1px",
 	    "text-align": "center",
 	    "word-break": "break-all"
 	  });
@@ -166,8 +168,8 @@
     <div id="selected" style="height: 60px; padding-left: 1px; width:100%; font-size:1.5em">
     </div>
     <div id="inputspace">
-      <div id="word" style="height: 46px; padding-left: 2.5%; width: 100%; font-size: 1em;"></div>
-      <div class="keycontainer" style="height: 36px; padding-left: 2%; margin-top: 10px; width: 100%; user-select: none; font-size: 1.5em;"></div>
+      <div id="word" style="height: 46px; padding-left: 1%; width: 100%; font-size: 1em;"></div>
+      <div class="keycontainer" style="height: 36px; padding-left: 3%; margin-top: 10px; width: 100%; user-select: none; font-size: 1.5em;"></div>
     </div>
     <div id="input" style="margin-top: 20px; height: 30px; width: 100%;" ></div>
     <div id="wpm" style="margin-top: 10px; height: 30px; width: 100%;" ></div>
