--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,40 +1,120 @@
-body {
-  margin: 0;
+html, body {
+  width: 100%;
   height: 100%;
-  width:100%;
+  margin: 0px;
+  padding: 0px;
   overflow: hidden;
   position: fixed;
+  font-family: 'Lato', sans-serif;
+  color: #222;
+}
+
+hr {
+  width: 100%;
+  border: 0.5px solid #aaa;
 }
 
 .sentence {
-  height: 60px;
-  padding-left: 1px;
-  width:100%;
   font-size:1.5em;
+  min-height: 35px;
+  text-align: left;
+  margin-left: 7px;
+  margin-right: 7px;
 }
 
 .information {
-  margin-top: 20px;
-  height: 30px;
-  width: 100%; 
+  background-color: #fff;
+  color: #aaa;
+  min-height: 25px;
+  margin-bottom: 10px;
+}
+
+.writing {
+  color: #b7b7b7;
+}
+
+.word {
+  display: table-cell;
+  height: 40px;
+  max-width: 0px;
+  border: 0;
+  text-align: center;
+  vertical-align: middle;
+  word-break: break-all;
+}
+
+.key {
+  display: table-cell;
+  height: 55px;
+  max-width: 0px;
+  border-right: 1px solid #ccc;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
+
+#container {
+  position: absolute;
+  bottom: 177px;
+  left: 0px;
+  right: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #target {
-  color: red;
+  color: #DD2A2A;
+  margin-top: 30px;
+}
+
+#selected {
+  color: #222;
+  margin-bottom: 50px;
+}
+
+#keyboard {
+  position: absolute;
+  align-content: center;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+#inputspace {
+  background-color: #394047;
+  color: #fff;
+  margin: 0px;
+  padding-top: 5px;
+  padding-bottom: 25px;
+}
+
+#input {
+  display: table-cell;
+  max-width: 0px;
+  padding-left: 10px;
+  vertical-align: middle;
+}
+
+#wpm {
+  display: table-cell;
+  width: 110px;
+  padding-right: 10px;
+  text-align: right;
+  vertical-align: middle;
 }
 
 #wordcontainer {
-  height: 46px;
-  padding-left: 1%;
-  width: 100%;
+  color: #ccc;
   font-size: 1em;
+  margin-bottom: 15px;
 }
 
 #keycontainer {
-  height: 36px;
-  padding-left: 3%;
-  margin-top: 10px;
-  width: 100%;
   user-select: none;
-  font-size: 1.5em;
+  font-size: 2em;
 }
