--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
   </head>
   <body scroll="no">
     <div id="multicursor">
+      <div id="testing"></div>
       <div id="container">
         <div id="target" class="sentence"></div>
         <div id="selected" class="sentence"></div>
